ISS-DES-12-2-20 - ISS-DES-12-2-22 - Fixed Elements positions, spacing and ISI-Bar

--- a/styles/faqs.css
+++ b/styles/faqs.css
@@ -11,6 +11,11 @@ sup {
   top: -1rem;
 }
 
+.isi-header sup {
+  top: -0.75em;
+  font-size: 75%;
+}
+
 .pagesubnavstickpoint {
   background-color: var(--white);
 }
@@ -84,5 +89,17 @@ sup {
 
   .hpp-dtc-p-faqs .hpp-dtc-faqs-textContent_group:first-child {
     margin-top: 1rem;
+  }
+}
+
+@media screen and (min-width: 992px) and (max-width: 1100px) {
+  .hpp-dtc-m-hero.internal-hero .hero-bg img {
+    object-position: right;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  [data-module=PageSubnav] .pagesubnavcntr span>button {
+    margin-right: 35px;
   }
 }
